fixed button in card info and alignment

--- a/app/assets/stylesheets/items/_items.scss
+++ b/app/assets/stylesheets/items/_items.scss
@@ -5,7 +5,7 @@
     width: 60%;
   }
   .card-trip{
-    height: 400px;
+    height: 500px;
   }
   #map{
     position: sticky;
